--- a/data_cleaning/cleaning_SD7.ipynb
+++ b/data_cleaning/cleaning_SD7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "e19c1b4a-7424-43c6-a431-cb2483d67bf5",
    "metadata": {},
    "outputs": [],
@@ -16,29 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "b3512b21-2985-4bbf-9808-d04ebe42689d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "ftDir =\n",
-      "\n",
-      "    '/home/brooke/fieldtrip/fieldtrip-20191213'\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "ftDir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "d12341c7-4534-4cf8-816d-40275ae8cb9c",
    "metadata": {},
    "outputs": [
@@ -241,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "bfeff1ac-4c61-47e4-b5ae-99d8d0c95a5f",
    "metadata": {},
    "outputs": [
@@ -282,7 +260,7 @@
       "processing channel { 'EEG A1-A2' 'EEG A2-A3' 'EEG A3-A4' 'EEG A4-A5' 'EEG A5-A6' 'EEG A6-A7' 'EEG A7-A8' 'EEG A8-A9' 'EEG A9-A10' 'EEG B1-B2' 'EEG B2-B3' 'EEG B3-B4' 'EEG B4-B5' 'EEG B5-B6' 'EEG B6-B7' 'EEG B7-B8' 'EEG B8-B9' 'EEG B9-B10' 'EEG B10-B11' 'EEG B11-B12' 'EEG B12-B13' 'EEG B13-B14' 'EEG B14-B15' 'EEG B15-B16' 'EEG C1-C2' 'EEG C2-C3' 'EEG C3-C4' 'EEG C4-C5' 'EEG C5-C6' 'EEG C6-C7' 'EEG C7-C8' 'EEG C8-C9' 'EEG C9-C10' 'EEG D1-D2' 'EEG D2-D3' 'EEG D3-D4' 'EEG D4-D5' 'EEG D5-D6' 'EEG D6-D7' 'EEG D7-D8' 'EEG D8-D9' 'EEG D9-D10' 'EEG E1-E2' 'EEG E2-E3' 'EEG E3-E4' 'EEG E4-E5' 'EEG E5-E6' 'EEG E6-E7' 'EEG E7-E8' 'EEG E8-E9' 'EEG E9-E10' 'EEG F1-F2' 'EEG F2-F3' 'EEG F3-F4' 'EEG F4-F5' 'EEG F5-F6' 'EEG F6-F7' 'EEG F7-F8' 'EEG F8-F9' 'EEG F9-F10' 'EEG G1-G2' 'EEG G2-G3' 'EEG G3-G4' 'EEG G4-G5' 'EEG G5-G6' 'EEG G6-G7' 'EEG G7-G8' 'EEG G8-G9' 'EEG G9-G10' 'EEG A'1-A'2' 'EEG A'2-A'3' 'EEG A'3-A'4' 'EEG A'4-A'5' 'EEG A'5-A'6' 'EEG A'6-A'7' 'EEG A'7-A'8' 'EEG A'8-A'9' 'EEG A'9-A'10' 'EEG B'1-B'2' 'EEG B'2-B'3' 'EEG B'3-B'4' 'EEG B'4-B'5' 'EEG B'5-B'6' 'EEG B'6-B'7' 'EEG B'7-B'8' 'EEG B'8-B'9' 'EEG B'9-B'10' 'EEG C'1-C'2' 'EEG C'2-C'3' 'EEG C'3-C'4' 'EEG C'4-C'5' 'EEG C'5-C'6' 'EEG C'6-C'7' 'EEG C'7-C'8' 'EEG C'8-C'9' 'EEG C'9-C'10' 'EEG D'1-D'2' 'EEG D'2-D'3' 'EEG D'3-D'4' 'EEG D'4-D'5' 'EEG D'5-D'6' 'EEG D'6-D'7' 'EEG D'7-D'8' 'EEG D'8-D'9' 'EEG D'9-D'10' 'EEG E'1-E'2' 'EEG E'2-E'3' 'EEG E'3-E'4' 'EEG E'4-E'5' 'EEG E'5-E'6' 'EEG E'6-E'7' 'EEG E'7-E'8' 'EEG E'8-E'9' 'EEG E'9-E'10' 'EEG F'1-F'2' 'EEG F'2-F'3' 'EEG F'3-F'4' 'EEG F'4-F'5' 'EEG F'5-F'6' 'EEG F'6-F'7' 'EEG F'7-F'8' 'EEG F'8-F'9' 'EEG F'9-F'10' 'EEG G'1-G'2' 'EEG G'2-G'3' 'EEG G'3-G'4' 'EEG G'4-G'5' 'EEG G'5-G'6' 'EEG G'6-G'7' 'EEG G'7-G'8' 'EEG G'8-G'9' 'EEG G'9-G'10' 'EEG EKG 1-EKG 2' 'EEG Fpz-Cz' 'EEG Cz-Oz' 'EEG CC3-Cz' 'EEG Cz-CC4' 'DC1' 'DC2' 'DC3' 'DC4' }\n",
       "reading and preprocessing\n",
       "reading and preprocessing trial 1 from 1\n",
-      "the call to \"ft_preprocessing\" took 135 seconds and required the additional allocation of an estimated 1583 MB\n",
+      "the call to \"ft_preprocessing\" took 134 seconds and required the additional allocation of an estimated 1602 MB\n",
       "\n",
       "data = \n",
       "\n",
@@ -314,6 +292,43 @@
     "cfg.trl = [begin_trl end_trl 0];\n",
     "cfg = ft_definetrial(cfg);\n",
     "data = ft_preprocessing(cfg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "64936694-2925-47b8-b8a0-e37bd9c48ad8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the input is raw data with 141 channels and 1 trials\n",
+      "the call to \"ft_selectdata\" took 0 seconds and required the additional allocation of an estimated 1 MB\n",
+      "resampling data\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mCheck for incorrect argument data type or missing argument in call to function 'resample'.\n",
+      "\n",
+      "Error in ft_resampledata (line 228)\n",
+      "        newdat = transpose(resample(transpose(olddat),fsres,fsorig));\n",
+      "\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "%% Downsample %%\n",
+    "cfg = [];\n",
+    "cfg.resamplefs = 500;\n",
+    "data = ft_resampledata(cfg, data);"
    ]
   },
   {
