minor issue with trial ending times

--- a/data_cleaning/clean_BJH016.ipynb
+++ b/data_cleaning/clean_BJH016.ipynb
@@ -318,57 +318,25 @@
    "metadata": {},
    "source": [
     "# Cleaning Notes with Bob\n",
-    "## 1/24/2022\n",
+    "## 1/19/2022\n",
     "\n",
     "Clean data, but with a lot of spiking activity\n",
-    "Epileptic channels: F6-9\n",
     "\n",
-    "Noisy channels: C10, G'10, F'10, F'2-F'3\n",
+    "Epileptic channels: Gl1, GL2, GL3, HL1, HL2\n",
     "\n",
-    "Epochs that may need to be removed (depending on how the data looks after removing epileptic channels + nearby channels):\n",
-    "`37-39\n",
-    "53-54\n",
-    "84-86\n",
-    "108-110\n",
-    "133-135\n",
-    "191\n",
-    "205\n",
-    "224-225\n",
-    "272\n",
-    "308-310\n",
-    "330-332\n",
-    "335-336\n",
-    "436-437\n",
-    "463\n",
-    "485\n",
-    "497-499\n",
-    "523-528\n",
-    "534\n",
-    "555\n",
-    "559-560\n",
-    "589\n",
-    "599\n",
-    "629\n",
-    "678\n",
-    "683\n",
-    "710\n",
-    "721-722\n",
-    "767-768\n",
-    "772\n",
-    "884\n",
-    "891\n",
-    "927\n",
-    "982\n",
-    "1055\n",
-    "1134\n",
-    "1168\n",
-    "1189\n",
-    "1126\n",
-    "1270\n",
-    "1298\n",
-    "1306\n",
-    "1361`\n"
+    "Noisy channels: BL1, F8, EL1, EL2 , HL14, HL15, HL16\n",
+    "\n",
+    "Epochs that may need to be removed (depending on how the data looks after removing epileptic channels + nearby channels): LOOK AT THIS AGAIN FOR THIS PATEINT\n",
+    "`116-117, 127.5:129, 160-161.5, 343-345, 540-541, 6216-623, 681-683`\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e33a7b0c-d6d9-4ae3-8506-da10f58aeb1d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
