bids ish folder structure

--- a/preprocessing/scripts/old_matlab_versions/clean_BJH016.ipynb
+++ b/preprocessing/scripts/old_matlab_versions/clean_BJH016.ipynb
@@ -46,20 +46,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4895f2d8-f896-46ca-b146-a5486ca010f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot(states.Trial_on_off(1:1000000))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "a7b19668-ba42-4195-b946-a1136e96f285",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------------------------------------------------------------------------------------\n",
+      "FieldTrip is developed by members and collaborators of the Donders Institute for Brain,\n",
+      "Cognition and Behaviour at Radboud University, Nijmegen, the Netherlands.\n",
+      "\n",
+      "                          --------------------------\n",
+      "                        /                            \\\n",
+      "                     ------------------------------------\n",
+      "                    /                                    \\\n",
+      "          -------------------------------------------------\n",
+      "         /                            /\\/\\/\\/\\/\\ \n",
+      "         ---------------------------------------------------\n",
+      "                  |        F  i  e  l  d  T  r  i  p       |\n",
+      "                  ------------------------------------------\n",
+      "                   \\                                      /\n",
+      "                     ------------------------------------\n",
+      "                          \\            /\n",
+      "                            ----------\n",
+      "\n",
+      "Please cite the FieldTrip reference paper when you have used FieldTrip in your study.\n",
+      "Robert Oostenveld, Pascal Fries, Eric Maris, and Jan-Mathijs Schoffelen. FieldTrip: Open\n",
+      "Source Software for Advanced Analysis of MEG, EEG, and Invasive Electrophysiological Data.\n",
+      "Computational Intelligence and Neuroscience, vol. 2011, Article ID 156869, 9 pages, 2011.\n",
+      "doi:10.1155/2011/156869.\n",
+      "-------------------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "%% Now add other paths %%\n",
     "% add fieldtrip\n",
@@ -93,7 +114,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
+   "id": "63589a32-ef05-49c6-9899-d508c7a946bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "restoredefaultpath"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "ac83a27b-78f9-488a-b7db-904e1ab62719",
    "metadata": {},
    "outputs": [],
@@ -102,17 +133,32 @@
     "ftDir = '/home/brooke/fieldtrip/fieldtrip-20191213';\n",
     "if exist('ft_defaults.m', 'file') == 0\n",
     "    addpath(ftDir); ft_defaults;\n",
-    "end\n",
-    "\n",
-    "addpath(genpath('/usr/local/MATLAB/R2021b/toolbox/signal/'))"
+    "end\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8269fb64-01a9-49b8-b637-2edc2a68f380",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "base_dir =\n",
+      "\n",
+      "    '/home/brooke/knight_server/remote/bstavel/'\n",
+      "\n",
+      "\n",
+      "bj16_path =\n",
+      "\n",
+      "    '/home/brooke/knight_server/remote/bstavel/pacman_ieeg_data/BJH016/BJH016_raw_data.mat'\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "%% load data %%\n",
     "\n",
@@ -154,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "e0b0aafc-d17d-4829-8340-80c1914fa8ec",
    "metadata": {},
    "outputs": [
@@ -164,31 +210,11 @@
      "text": [
       "the input is raw data with 273 channels and 1 trials\n",
       "the call to \"ft_selectdata\" took 0 seconds and required the additional allocation of an estimated 1 MB\n",
-      "resampling data\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[0;31mUnrecognized function or variable 'eml_bitand'.\n",
-      "\n",
-      "Error in kaiser (line 41)\n",
-      "iseven = ONE - eml_bitand(nw,ONE);\n",
-      "\n",
-      "Error in signal.internal.resample.createFilter (line 28)\n",
-      "        h = firls( L-1, [0 2*fc 2*fc 1], [1 1 0 0]).*kaiser(L,bta)';\n",
-      "\n",
-      "Error in signal.internal.resample.uniformResample (line 43)\n",
-      "[h,hout,delay] = signal.internal.resample.createFilter(x,Lx,p,q,N,bta);\n",
-      "\n",
-      "Error in resample (line 198)\n",
-      "            signal.internal.resample.uniformResample(xIn, isDimValSet, Dim, dimIn, numericArgs{:});\n",
-      "\n",
-      "Error in ft_resampledata (line 231)\n",
-      "        newdat = transpose(resample(transpose(olddat),fsres,fsorig));\n",
-      "\n",
-      "\u001b[0m"
+      "resampling data\n",
+      "resampling data in trial 1 from 1\n",
+      "original sampling rate = 2000 Hz\n",
+      "new sampling rate = 1080 Hz\n",
+      "the call to \"ft_resampledata\" took 28 seconds and required the additional allocation of an estimated 18628 MB\n"
      ]
     }
    ],
@@ -201,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "4c867e4c-e47b-49cd-8450-a01f85c053ff",
    "metadata": {},
    "outputs": [
@@ -209,38 +235,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the call to \"ft_selectdata\" took 0 seconds and required the additional allocation of an estimated 0 MB\n",
-      "preprocessing\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[0;31mUnable to resolve the name signalwavelet.internal.isodd.\n",
+      "Warning: the data does not contain a trial definition\n",
+      " In '/home/brooke/fieldtrip/fieldtrip-20191213/utilities/private/fixsampleinfo.m' at line 80\n",
+      " In '/home/brooke/fieldtrip/fieldtrip-20191213/utilities/ft_datatype_raw.m' at line 147\n",
+      " In '/home/brooke/fieldtrip/fieldtrip-20191213/utilities/ft_checkdata.m' at line 268\n",
+      " In '/home/brooke/fieldtrip/fieldtrip-20191213/ft_preprocessing.m' at line 281\n",
       "\n",
-      "Error in isodd (line 9)\n",
-      "tf = signalwavelet.internal.isodd(x);\n",
-      "\n",
-      "Error in buttap (line 44)\n",
-      "if isodd(n) % n is odd\n",
-      "\n",
-      "Error in butter>butterImpl (line 101)\n",
-      "[zs,ps,ks] = buttap(n1);\n",
-      "\n",
-      "Error in butter (line 59)\n",
-      "   [varargout{1:nargout}] = butterImpl(n,Wn,varargin{:});\n",
-      "\n",
-      "Error in ft_preproc_lowpassfilter (line 156)\n",
-      "    [B, A] = butter(N, max(Flp)/Fn);\n",
-      "\n",
-      "Error in preproc (line 388)\n",
-      "if strcmp(cfg.lpfilter, 'yes'),     dat = ft_preproc_lowpassfilter(dat, fsample, cfg.lpfreq, cfg.lpfiltord, cfg.lpfilttype, cfg.lpfiltdir, cfg.lpinstabilityfix, cfg.lpfiltdf, cfg.lpfiltwintype, cfg.lpfiltdev, cfg.plotfiltresp, cfg.usefftfilt); end\n",
-      "\n",
-      "Error in ft_preprocessing (line 377)\n",
-      "    [dataout.trial{i}, dataout.label, dataout.time{i}, cfg] = preproc(data.trial{i}, data.label,  data.time{i}, cfg, begpadding, endpadding);\n",
-      "\n",
-      "\u001b[0m"
+      "Warning: reconstructing sampleinfo by assuming that the trials are consecutive segments of a continuous recording\n",
+      "> In fixsampleinfo (line 94)\n",
+      "In ft_datatype_raw (line 147)\n",
+      "In ft_checkdata (line 268)\n",
+      "In ft_preprocessing (line 281)\n",
+      "the call to \"ft_selectdata\" took 0 seconds and required the additional allocation of an estimated 2 MB\n",
+      "preprocessing\n",
+      "preprocessing trial 1 from 1\n",
+      "the call to \"ft_preprocessing\" took 146 seconds and required the additional allocation of an estimated 6705 MB\n"
      ]
     }
    ],
@@ -267,10 +276,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "dc7f3c7f-8afc-48d3-9a59-697ddb34c35b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the input is raw data with 273 channels and 1 trials\n",
+      "Warning: the data has been resampled, not showing the events\n",
+      "detected   0 visual artifacts\n",
+      "the call to \"ft_prepare_layout\" took 0 seconds and required the additional allocation of an estimated 1 MB\n",
+      "the call to \"ft_databrowser\" took 8 seconds and required the additional allocation of an estimated 6772 MB\n"
+     ]
+    }
+   ],
    "source": [
     "%plot native\n",
     "%% display %%\n",
@@ -281,7 +302,7 @@
     "% cfg.channel = goodChansDispIdx;\n",
     "% cfg.position = pos2;\n",
     "% cfg.ylim = [-1 1] * .0005;\n",
-    "ft_databrowser(cfg, data);"
+    "ft_databrowser(cfg, filtered_data);"
    ]
   },
   {
