big commit of analyses up to SFN 2022

--- a/raw_data/BJH017/scripts/conversion2fif_BJH017.ipynb
+++ b/raw_data/BJH017/scripts/conversion2fif_BJH017.ipynb
@@ -55,7 +55,7 @@
     "## prep paths\n",
     "\n",
     "subject = 'BJH017'\n",
-    "orig_data_fi = '/home/brooke/knight_server/remote/WashU/data/PacmanTask/BJH017/PacmanTask/ECOG001/ECOGS001R01.dat''\n",
+    "orig_data_fi = '/home/brooke/knight_server/remote/WashU/data/PacmanTask/BJH017/PacmanTask/ECOG001/ECOGS001R01.dat'\n",
     "raw_data_dir = f\"/home/brooke/pacman/raw_data/subs/{subject}/ieeg\""
    ]
   },
